Adding Register & Login Authentication
Project was rebuilt to add in single user registration.

--- a/gTarrGames/gTarrGames.Web/Views/Home/Index.cshtml
+++ b/gTarrGames/gTarrGames.Web/Views/Home/Index.cshtml
@@ -1,15 +1,18 @@
-﻿
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "Home Page";
 }
 
-<h2>Homepage for gTarr Games</h2>
+<div class="jumbotron">
+    <h1>Welcome to gTarr Games!</h1>
+    <p class="lead">Try our first game: Cat Simulator!</p>
+</div>
 
-<h4>Try our first game: Cat Simulator!</h4>
-
-<p>Play Cat Simulator and try to become a feline's best friend! See if you can figure out 
-    the mind of cat..</p>
-<br />
-<br />
-<p>Register an account and login to see current your high scores.</p>
-
+<div>
+    <p>
+            Play Cat Simulator and try to become a feline's best friend! See if you can figure out
+            the mind of cat..
+     </p>
+    <br />
+     <p>Create an account so you can save your scores and see how you compeare to other players.</p>
+    <br />
+</div>
