Re-Build for Week 5
-Corrected Issue where Register & Login did not work

New Web Address: https://cis174-gtarr-web.azurewebsites.net/

--- a/gTarrGames/gTarrGames.Web/Views/Home/About.cshtml
+++ b/gTarrGames/gTarrGames.Web/Views/Home/About.cshtml
@@ -1,15 +1,7 @@
-﻿@model gTarrGames.Web.Api.ProjectMemberApiController
-
-@{
+﻿@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<div class="container">
-
-    <p>Project Members</p>
-    <br />
-    <p>Greg Tarr | gatarr@dmacc.edu | Creator</p>
-
-</div>
+<p>Site Creator: Greg Tarr gatarr@dmacc.edu</p>
