--- a/gTarrGames/gTarrGames.Web/Views/Home/Index.cshtml
+++ b/gTarrGames/gTarrGames.Web/Views/Home/Index.cshtml
@@ -3,16 +3,16 @@
 }
 
 <div class="jumbotron">
-    <h1>Welcome to gTarr Games!</h1>
-    <p class="lead">Try our first game: Cat Simulator!</p>
+    <h1>Welcome to gTarr Games</h1>
+    <h4>Try our first game: Cat Simulator!</h4>
 </div>
 
-<div>
+<div class="row">
     <p>
-            Play Cat Simulator and try to become a feline's best friend! See if you can figure out
-            the mind of cat..
-     </p>
+        Play Cat Simulator and try to become a feline's best friend! See if you can figure out
+        the mind of cat..
+    </p>
     <br />
-     <p>Create an account so you can save your scores and see how you compeare to other players.</p>
     <br />
+    <p>Register an account and login to see current your high scores.</p>
 </div>
