--- a/gTarrGames/gTarrGames.Web/Views/Shared/_Layout.cshtml
+++ b/gTarrGames/gTarrGames.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("High Scores", "Index", "HighScores")</li>
+
+                    <li>@if (User.Identity.IsAuthenticated)
+                    {
+                        @Html.ActionLink("Profile", "Update", "Person")
+                    }
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -53,7 +59,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Greg Tarr gatarr@dmacc.edu</p>
+            <p>&copy; @DateTime.Now.Year - Greg Tarr</p>
         </footer>
     </div>
 
