Uninstalled New versions that created errors
A new version of bootstrap would not process the navbar element.  Finally, I re-installed an earlier version to finish the project.

--- a/gTarrGames/gTarrGames.Web/Views/Person/Update.cshtml
+++ b/gTarrGames/gTarrGames.Web/Views/Person/Update.cshtml
@@ -1,6 +1,6 @@
 ﻿@model gTarrGames.Shared.ViewModels.PersonViewModel
 
-<script src="~/Scripts/DMACC.person.js" type="text/javascript"></script>
+<script src="~/Scripts/DMACC/person.js" type="text/javascript"></script>
 
 
 <h2>Create Profile</h2>
@@ -60,7 +60,7 @@
 
 @*@model gTarrGames.Web.Models.UpdatePersonModel
 
-    <script src="~/Scripts/DMACC.person.js" type="text/javascript"></script>
+    <script src="~/Scripts/DMACC/person.js" type="text/javascript"></script>
 
     <h2>Create Profile</h2>
 
