Assignment 7.2 Add an Error Page
-Implemented error handling via error page.
-Created generate error page to throw System.OutOfMemoryException
-For some reason, now profile page is broken only when deployed, still works locally

--- a/gTarrGames/gTarrGames.Web/Views/Shared/_Layout.cshtml
+++ b/gTarrGames/gTarrGames.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         @Html.ActionLink("Profile", "Update", "Person")
                     }
                     </li>
+                    <li>@Html.ActionLink("Error", "ErrorGenerator", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
